Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.2.0 Beta2
-
Fix Version/s: 6.2.0 RC
-
Component/s: GUI: Font handling
-
Labels:None
-
Commits:a68e1b96b804e7677b0afd2cd505d99703360cf6 (qt/qtbase/dev) 49c4ad245df0e4e3824578a7956770c7aeb50fea (qt/qtbase/6.2)
Description
The most basic use of QFont, indeed the first usage example in QFont doc itself is the constructor taking a family name:
QFont f("Times", 10);
Now in https://codereview.qt-project.org/c/qt/qtbase/+/318013 that constructor was marked as "obsolete" (?!), but now after [https://codereview.qt-project.org/c/qt/qtbase/+/354366] it generates deprecation warnings.
This is a very widely used constructor, there are very many usages in Qt's own docs, examples and autotests - are you really, really sure that deprecation is the best solution?
Attachments
For Gerrit Dashboard: QTBUG-95441 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
363953,2 | Undeprecate QFont(QString) since this is still useful for many | dev | qt/qtbase | Status: MERGED | +2 | 0 |
364150,2 | Undeprecate QFont(QString) since this is still useful for many | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |