Undeprecate QFont(QString) since this is still useful for many

Fixes: QTBUG-95441
Change-Id: Ib1f78a5a797c7b7d7eb252a7bfa11b5c003ce0d3
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit a68e1b96b804e7677b0afd2cd505d99703360cf6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>